# cvtxt

./: CMakeLists.txt  LICENSE  README.md  grammar  spec
src/: defines.hpp  filedata.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp
src/file/: filedata.cpp  filedata.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/render/: baseshader.cpp  baseshader.hpp  color.cpp  color.hpp  renderbatch.cpp  renderbatch.hpp  renderbox.cpp  renderbox.hpp  renderlist.cpp  renderlist.hpp
